--- a/templates/login.html
+++ b/templates/login.html
@@ -3,15 +3,15 @@
 <div class="auth-container">
     <h1>Login</h1>
     
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <div class="flash-message">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    
     <form action="{{ url_for('login_auth') }}" method="POST">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="flash-message flash-{{ category }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <div class="form-group">
             <label for="user_type">User Type:</label>
             <select name="user_type" id="user_type" required>
