--- a/templates/register_staff.html
+++ b/templates/register_staff.html
@@ -2,48 +2,61 @@
 {% block content %}
 <div class="auth-container">
     <h1>Airline Staff Registration</h1>
+    
     <form action="{{ url_for('register_staff_auth') }}" method="POST">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="flash-message flash-{{ category }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" required>
         </div>
+
         <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" required>
         </div>
+
         <div class="form-group">
             <label for="first_name">First Name:</label>
             <input type="text" name="first_name" id="first_name" required>
         </div>
+
         <div class="form-group">
             <label for="last_name">Last Name:</label>
             <input type="text" name="last_name" id="last_name" required>
         </div>
+
         <div class="form-group">
             <label for="date_of_birth">Date of Birth:</label>
             <input type="date" name="date_of_birth" id="date_of_birth" required>
         </div>
+
         <div class="form-group">
-            <label for="airline_name">Airline Name:</label>
-            <select name="airline_name" id="airline_name" required>
-                <option value="">Select Airline</option>
-                <option value="Jet Blue">Jet Blue</option>
-                <option value="China Eastern">China Eastern</option>
-                <option value="Delta Airlines">Delta Airlines</option>
-            </select>
+            <label for="airline_name">Airline:</label>
+            <input type="text" name="airline_name" id="airline_name" required>
         </div>
+
         <div class="form-group">
-            <label for="phone_number">Phone Number:</label>
-            <input type="text" name="phone_numbers" id="phone_number" required>
+            <label for="phone_numbers">Phone Number:</label>
+            <input type="text" name="phone_numbers" id="phone_numbers">
         </div>
+
         <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" name="emails" id="email" required>
+            <label for="emails">Email:</label>
+            <input type="email" name="emails" id="emails">
         </div>
+
         <div class="form-group">
             <button type="submit">Register</button>
         </div>
     </form>
+
     <p class="register-link">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
 </div>
 {% endblock %} 
